Bing/examples/good/08-const.bing

void main() {
    int i = 3;
    i++;
    println(i);



    int ilo = 1;
    for (j = 1 to 10) {
        ilo = ilo * j;
    }
    println(ilo);
}