Bing/examples/bad/08-const.bing

void main() {
    const int i = 3;
    i++;
    print(i);
}